fixed content overflow

--- a/styling.css
+++ b/styling.css
@@ -7,7 +7,6 @@ html {
 html, body {
     height: 100%;
     margin: 0;
-    overflow: hidden; /* Prevent scrolling on the root level */
     }
 .background{
     background-image: url('images/dark_leaves_portrait.jpeg');
@@ -26,13 +25,13 @@ html, body {
 }
 .content{
     display: flex;
-    height: 100%;
+    min-height: 100vh; /* Allow content to grow with viewport */
     width:auto;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     overflow: auto; 
-    margin-top: 2.2rem;
+    padding: 4.2rem;
     z-index: 999;
     position:relative;
 }
